--- a/nginx-wm.conf
+++ b/nginx-wm.conf
@@ -5,6 +5,10 @@ server {
 	root /usr/share/nginx/html;
 	index index.php index.html index.htm;
 
+	set $yii_bootstrap "index.php";
+
+	charset utf-8;
+
 	# Make site accessible from http://localhost/
 	#server_name localhost;
 	
@@ -16,12 +20,14 @@ server {
 	error_log /dev/stdout info;
 	access_log /dev/stdout;
 
-	
 	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to index.html
-		try_files $uri $uri/ /index.php?q=$uri&$args;
+		index  index.html $yii_bootstrap;
+        	try_files $uri $uri/ /$yii_bootstrap?$args;
 	}
+
+	location ~ ^/(protected|framework|themes/\w+/views) {
+       	 	deny  all;
+    	}
 
 	#error_page 404 /404.html;
 
@@ -37,11 +43,18 @@ server {
 	location ~ \.php$ {
                 try_files $uri =404;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+		set $fsn /$yii_bootstrap;
+        	if (-f $document_root$fastcgi_script_name){
+            		set $fsn $fastcgi_script_name;
+        	}
+		
 		fastcgi_pass unix:/var/run/php5-fpm.sock;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+ 		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fsn;
     		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		fastcgi_index index.php;
-		include fastcgi_params;
+		
 	}
 
         location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
