--- a/nginx-wm.conf
+++ b/nginx-wm.conf
@@ -2,7 +2,7 @@ server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-	root /usr/share/nginx/html;
+	root /usr/share/nginx/html/www;
 	index index.php index.html index.htm;
 
 	set $yii_bootstrap "index.php";
@@ -35,7 +35,7 @@ server {
 	#
 	error_page 500 502 503 504 /50x.html;
 	location = /50x.html {
-		root /usr/share/nginx/html;
+		root /usr/share/nginx/html/www;
 	}
 
 	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
