--- a/supervisord.conf
+++ b/supervisord.conf
@@ -35,3 +35,8 @@ priority=10
 stdout_events_enabled=true
 stderr_events_enabled=true
 
+
+[program:cron]
+directory = /etc/cron.d/
+command = /usr/sbin/cron -f
+autorestart = true
