--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,14 @@ wm-host-image:
   volumes:
   - "/var/docker/wm/web/log:/usr/share/nginx/html/log"
   - "/var/docker/wm/web/protected/runtime:/usr/share/nginx/html/protected/runtime"
-  
+  - "/var/docker/wm/web/protected/nosqlvars:/usr/share/nginx/html/protected/nosqlvars"
+  - "/var/docker/wm/web/protected/migrations:/usr/share/nginx/html/protected/migrations"
+  - "/var/docker/wm/web/www/files/backups:/usr/share/nginx/html/www/files/backups"
+  - "/var/docker/wm/web/www/files/schedule_reports:/usr/share/nginx/html/www/files/schedule_reports"
+  - "/var/docker/wm/web/www/files/schedule_type_reports:/usr/share/nginx/html/www/files/schedule_type_reports"
+  - "/var/docker/wm/web/www/files/xml_messages:/usr/share/nginx/html/www/files/xml_messages"
+  - "/var/docker/wm/web/www/files/weather_monitor_reports:/usr/share/nginx/html/www/files/weather_monitor_reports"
+
 wm-db-image:
   build: WM-Db
   ports:
@@ -23,4 +30,3 @@ wm-db-image:
   volumes:
   - /var/docker/wm/db/var/lib/mysql:/var/lib/mysql
 
-  
